# wfcast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  merge_production_dotenvs_in_dotenv.py  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
wfcast/: conftest.py  types.py
wfcast/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
wfcast/static/css/: project.css
wfcast/templates/: base.html
wfcast/templates/weather/: city_search.html  results.html  statistics.html
wfcast/templates/weather/partials/: autocomplete_results.html
wfcast/users/: adapters.py  admin.py  apps.py  context_processors.py  managers.py  models.py  urls.py  views.py
wfcast/users/migrations/: 0001_initial.py
wfcast/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
wfcast/weather/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
wfcast/weather/migrations/: 0001_initial.py  0002_alter_city_options_alter_searchhistory_options_and_more.py
